added code to test with sample data
and some doc changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+#Eclipse project files
+.project
+.pydevproject
+
+#Python compiled files
 *.py[co]
+
+#Vim backup and swap
+*~
+.*.sw?
 
 # Packages
 *.egg
